@@ -5,7 +5,7 @@ add_subdirectory(contrib/Argengine EXCLUDE_FROM_ALL)
 include_directories(contrib/Argengine/src)
 
 # Translation files in src/translations (without .ts)
-set(TS heimer_fi heimer_fr heimer_it)
+set(TS heimer_fi heimer_fr heimer_it heimer_nl)
 set(TS_FILES)
 set(QM_FILES)
 foreach(TS_FILE ${TS})
